added a simple footer

--- a/selfPace/index.html
+++ b/selfPace/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Countdown Timer</title>
   <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
   <script src="./index.js" defer></script>
 </head>
 <body>
@@ -53,6 +54,7 @@
   </div>
 </section>
 <section id="section1">
+  <h2>Flash sale ends in:</h2>
 <div id="countdown"></div>
 <div class="images">
 <div class="images1">
@@ -73,6 +75,19 @@
 <div class="pic"><img src="./images/c4.jpeg" alt=""><p>Ksh. 1200</p></div>
 <div class="pic"><img src="./images/c5.jpeg" alt=""><p>Ksh. 1200</p></div>
 </div>
+</div>
+<!-- footer section -->
+<div class="footer">
+  <div class="contacts">
+    <p>Contact Us On</p>
+  </div>
+  <div class="icons">
+<i class="fab fa-whatsapp"></i>
+<i class="fab fa-instagram"></i>
+<i class="fab fa-x"></i>
+<i class="fab fa-facebook"></i>
+</div>
+<p><i class="fas fa-copyright"> All rights reserved. Ruth Lengalei</i></p>
 </div>
 </section>
 </body>
