--- a/selfPace/index.html
+++ b/selfPace/index.html
@@ -53,12 +53,13 @@
   <button class="next">&gt;</button>
   </div>
 </section>
-<section id="section1">
-  <h2>Flash sale ends in:</h2>
+<h2>Flash sale ends in:</h2>
 <div id="countdown"></div>
+<!-- <section id="section1">
+
 <div class="images">
 <div class="images1">
-<div class="pic"> <img src="./images/c1.jpeg" alt=""><p>Ksh. 1200</p></div>
+<div class="pic"><img src="./images/c1.jpeg" alt=""><p>Ksh. 1200</p></div>
 <div class="pic"><img src="./images/c2.jpeg" alt=""><p>Ksh. 1200</p></div>
 <div class="pic"><img src="./images/c3.jpeg" alt=""><p>Ksh. 1200</p></div>
 <div class="pic"><img src="./images/c4.jpeg" alt=""><p>Ksh. 1200</p></div>
@@ -76,6 +77,19 @@
 <div class="pic"><img src="./images/c5.jpeg" alt=""><p>Ksh. 1200</p></div>
 </div>
 </div>
+</section> -->
+<section id="section2">
+  
+<div class="aboutMe">
+  <video src="./Images/vid1.webm" id="video-background" autoplay muted loop></video>
+  <div class="myStory"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit quia in iure distinctio suscipit esse nulla aspernatur ad molestias aperiam? In aliquam eos explicabo iusto, maiores ratione modi, quisquam blanditiis animi, architecto numquam. Placeat sed dolore harum aliquid temporibus quas provident pariatur in eligendi ab, odio suscipit ducimus eius eum quam voluptatum numquam beatae qui explicabo nisi natus fuga quae sit alias? Architecto, vitae? Aspernatur quae consequuntur inventore fuga ut animi, id magnam dolorem. Autem ducimus labore molestiae mollitia similique magnam ut vero voluptatum, assumenda, quos dolorem eveniet soluta explicabo, nulla tempore nemo expedita id rem doloremque quibusdam. Illo, beatae!</div>
+  <div class="profilePic">
+    <div class="profile">
+      <img src="./Images/p1.jpg" alt="profilePic" class="Ppic">
+    </div>
+  </div>
+</div>
+</section>
 <!-- footer section -->
 <div class="footer">
   <div class="contacts">
@@ -89,6 +103,6 @@
 </div>
 <p><i class="fas fa-copyright"> All rights reserved. Ruth Lengalei</i></p>
 </div>
-</section>
+
 </body>
 </html>
